--- a/index.html
+++ b/index.html
@@ -3,110 +3,148 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Bitcoin to USD and USD to Bitcoin</title>
+  <title>Hourglass with Refresh</title>
   <style>
     body {
       font-family: Arial, sans-serif;
-      text-align: center;
-      margin-top: 10%;
-      background-color: #f7f7f7;
+      background: #f7f7f7;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      height: 100vh;
+      margin: 0;
+      overflow: hidden;
     }
+
     h1 {
+      margin-bottom: 20px;
       color: #f7931a;
     }
-    .price {
-      font-size: 1.5rem;
-      color: #333;
-      margin: 10px 0;
-    }
-    .sundial-container {
+
+    .hourglass {
       position: relative;
-      width: 200px;
+      width: 120px;
       height: 200px;
-      margin: 20px auto;
-      border: 6px solid #f7931a;
-      border-radius: 50%;
-      background: radial-gradient(circle, #fff 60%, #e3e3e3 100%);
-      box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+      animation: flip 60s linear infinite;
     }
-    .sundial-hand {
+
+    .top-glass,
+    .bottom-glass {
       position: absolute;
-      width: 8px;
-      height: 100px;
-      background-color: #f7931a;
-      top: 50px;
-      left: 96px;
-      transform-origin: 4px 100%;
-      transform: rotate(0deg);
-      transition: transform 0.5s ease;
+      width: 100%;
+      height: 50%;
+      border: 6px solid #333;
+      background: #f7f7f7;
+      clip-path: polygon(50% 0%, 100% 100%, 0% 100%);
     }
-    .sundial-center {
+
+    .top-glass {
+      top: 0;
+      transform-origin: center bottom;
+    }
+
+    .bottom-glass {
+      bottom: 0;
+      transform-origin: center top;
+    }
+
+    .sand {
       position: absolute;
-      width: 16px;
-      height: 16px;
+      width: 100%;
+      height: 50%;
+      background: linear-gradient(to bottom, #f7931a 50%, transparent 50%);
+      clip-path: polygon(50% 0%, 100% 100%, 0% 100%);
+      animation: sand-drip 60s linear infinite;
+    }
+
+    .sand-falling {
+      position: absolute;
+      top: 0;
+      left: 50%;
+      width: 6px;
+      height: 0;
       background-color: #f7931a;
-      border-radius: 50%;
-      top: 92px;
-      left: 92px;
+      animation: falling-sand 60s linear infinite;
+    }
+
+    .sand-collecting {
+      position: absolute;
+      bottom: 0;
+      width: 100%;
+      height: 0;
+      background: #f7931a;
+      clip-path: polygon(50% 0%, 100% 100%, 0% 100%);
+      animation: collecting-sand 60s linear infinite;
+    }
+
+    /* Animations */
+    @keyframes flip {
+      0%, 50% {
+        transform: rotate(0deg);
+      }
+      51%, 100% {
+        transform: rotate(180deg);
+      }
+    }
+
+    @keyframes sand-drip {
+      0% {
+        height: 100%;
+      }
+      50% {
+        height: 0%;
+      }
+      100% {
+        height: 100%;
+      }
+    }
+
+    @keyframes falling-sand {
+      0% {
+        height: 0;
+      }
+      50% {
+        height: 100%;
+      }
+      100% {
+        height: 0;
+      }
+    }
+
+    @keyframes collecting-sand {
+      0% {
+        height: 0;
+      }
+      50% {
+        height: 100%;
+      }
+      100% {
+        height: 0;
+      }
     }
   </style>
 </head>
 <body>
-  <h1>Bitcoin and USD Converter</h1>
-  <div id="btcToUsd" class="price">Loading 1 BTC to USD...</div>
-  <div id="usdToBtc" class="price">Loading 1 USD to BTC...</div>
-
-  <div class="sundial-container">
-    <div class="sundial-hand" id="sundialHand"></div>
-    <div class="sundial-center"></div>
+  <h1>Hourglass Refresh Timer</h1>
+  <div class="hourglass">
+    <div class="top-glass">
+      <div class="sand"></div>
+    </div>
+    <div class="sand-falling"></div>
+    <div class="bottom-glass">
+      <div class="sand-collecting"></div>
+    </div>
   </div>
-
   <script>
-    async function fetchBitcoinPrice() {
-      try {
-        // Fetch Bitcoin price in USD
-        const response = await fetch('https://api.coingecko.com/api/v3/simple/price?ids=bitcoin&vs_currencies=usd');
-        const data = await response.json();
-        const btcToUsd = data.bitcoin.usd; // 1 BTC in USD
-        const usdToBtc = 1 / btcToUsd; // 1 USD in BTC
-
-        // Update the webpage with the fetched values
-        document.getElementById('btcToUsd').innerText = `1 Bitcoin = $${btcToUsd.toLocaleString()} USD`;
-        document.getElementById('usdToBtc').innerText = `1 USD = ${usdToBtc.toFixed(8)} BTC`;
-
-        // Reset the sundial clock
-        animateSundial(0);
-      } catch (error) {
-        document.getElementById('btcToUsd').innerText = 'Error fetching BTC to USD price.';
-        document.getElementById('usdToBtc').innerText = 'Error fetching USD to BTC price.';
-      }
+    // Optional: Add functionality to fetch data every 60 seconds
+    async function refreshData() {
+      console.log("Refreshing data...");
+      // Add your fetch functionality here
     }
 
-    function animateSundial(angle) {
-      const hand = document.getElementById('sundialHand');
-      hand.style.transform = `rotate(${angle}deg)`;
-    }
-
-    // Initial fetch
-    fetchBitcoinPrice();
-
-    // Refresh price and animate sundial every 60 seconds
-    let refreshTime = 60000; // in milliseconds
-    let interval = 1000; // update sundial every second
-    let stepAngle = 360 / (refreshTime / interval); // degrees per interval
-    let currentAngle = 0;
-
-    setInterval(() => {
-      // Update sundial
-      currentAngle += stepAngle;
-      animateSundial(currentAngle);
-
-      // Reset angle and fetch data at refresh time
-      if (currentAngle >= 360) {
-        currentAngle = 0;
-        fetchBitcoinPrice();
-      }
-    }, interval);
+    // Refresh data every 60 seconds
+    setInterval(refreshData, 60000);
   </script>
 </body>
 </html>
