--- a/index.html
+++ b/index.html
@@ -3,148 +3,101 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Hourglass with Refresh</title>
+  <title>Bitcoin to USD and USD to Bitcoin</title>
   <style>
     body {
       font-family: Arial, sans-serif;
-      background: #f7f7f7;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      height: 100vh;
-      margin: 0;
-      overflow: hidden;
+      text-align: center;
+      margin-top: 10%;
+      background-color: #f7f7f7;
     }
-
     h1 {
-      margin-bottom: 20px;
       color: #f7931a;
     }
-
+    .price {
+      font-size: 1.5rem;
+      color: #333;
+      margin: 10px 0;
+    }
+    .hourglass-container {
+      position: relative;
+      width: 100px;
+      height: 150px;
+      margin: 20px auto;
+      perspective: 500px;
+    }
     .hourglass {
       position: relative;
-      width: 120px;
-      height: 200px;
-      animation: flip 60s linear infinite;
+      width: 100px;
+      height: 150px;
+      background: linear-gradient(to bottom, #f7931a 50%, #f7f7f7 50%);
+      border: 3px solid #333;
+      border-radius: 10px;
+      transform-origin: center;
+      transition: transform 1s ease;
     }
-
-    .top-glass,
-    .bottom-glass {
+    .hourglass::before,
+    .hourglass::after {
+      content: '';
       position: absolute;
-      width: 100%;
-      height: 50%;
-      border: 6px solid #333;
-      background: #f7f7f7;
-      clip-path: polygon(50% 0%, 100% 100%, 0% 100%);
-    }
-
-    .top-glass {
-      top: 0;
-      transform-origin: center bottom;
-    }
-
-    .bottom-glass {
-      bottom: 0;
-      transform-origin: center top;
-    }
-
-    .sand {
-      position: absolute;
-      width: 100%;
-      height: 50%;
-      background: linear-gradient(to bottom, #f7931a 50%, transparent 50%);
-      clip-path: polygon(50% 0%, 100% 100%, 0% 100%);
-      animation: sand-drip 60s linear infinite;
-    }
-
-    .sand-falling {
-      position: absolute;
-      top: 0;
       left: 50%;
-      width: 6px;
-      height: 0;
-      background-color: #f7931a;
-      animation: falling-sand 60s linear infinite;
-    }
-
-    .sand-collecting {
-      position: absolute;
-      bottom: 0;
-      width: 100%;
-      height: 0;
+      transform: translateX(-50%);
       background: #f7931a;
-      clip-path: polygon(50% 0%, 100% 100%, 0% 100%);
-      animation: collecting-sand 60s linear infinite;
     }
-
-    /* Animations */
-    @keyframes flip {
-      0%, 50% {
-        transform: rotate(0deg);
-      }
-      51%, 100% {
-        transform: rotate(180deg);
-      }
+    .hourglass::before {
+      top: 10%;
+      width: 20px;
+      height: 20px;
+      border-radius: 50%;
     }
-
-    @keyframes sand-drip {
-      0% {
-        height: 100%;
-      }
-      50% {
-        height: 0%;
-      }
-      100% {
-        height: 100%;
-      }
-    }
-
-    @keyframes falling-sand {
-      0% {
-        height: 0;
-      }
-      50% {
-        height: 100%;
-      }
-      100% {
-        height: 0;
-      }
-    }
-
-    @keyframes collecting-sand {
-      0% {
-        height: 0;
-      }
-      50% {
-        height: 100%;
-      }
-      100% {
-        height: 0;
-      }
+    .hourglass::after {
+      bottom: 10%;
+      width: 20px;
+      height: 20px;
+      border-radius: 50%;
     }
   </style>
 </head>
 <body>
-  <h1>Hourglass Refresh Timer</h1>
-  <div class="hourglass">
-    <div class="top-glass">
-      <div class="sand"></div>
-    </div>
-    <div class="sand-falling"></div>
-    <div class="bottom-glass">
-      <div class="sand-collecting"></div>
-    </div>
+  <h1>Bitcoin and USD Converter</h1>
+  <div id="btcToUsd" class="price">Loading 1 BTC to USD...</div>
+  <div id="usdToBtc" class="price">Loading 1 USD to BTC...</div>
+
+  <div class="hourglass-container">
+    <div class="hourglass" id="hourglass"></div>
   </div>
+
   <script>
-    // Optional: Add functionality to fetch data every 60 seconds
-    async function refreshData() {
-      console.log("Refreshing data...");
-      // Add your fetch functionality here
+    async function fetchBitcoinPrice() {
+      try {
+        const response = await fetch('https://api.coingecko.com/api/v3/simple/price?ids=bitcoin&vs_currencies=usd');
+        const data = await response.json();
+        const btcToUsd = data.bitcoin.usd; // 1 BTC in USD
+        const usdToBtc = 1 / btcToUsd; // 1 USD in BTC
+
+        document.getElementById('btcToUsd').innerText = `1 Bitcoin = $${btcToUsd.toLocaleString()} USD`;
+        document.getElementById('usdToBtc').innerText = `1 USD = ${usdToBtc.toFixed(8)} BTC`;
+
+        // Flip the hourglass
+        flipHourglass();
+      } catch (error) {
+        document.getElementById('btcToUsd').innerText = 'Error fetching BTC to USD price.';
+        document.getElementById('usdToBtc').innerText = 'Error fetching USD to BTC price.';
+      }
     }
 
-    // Refresh data every 60 seconds
-    setInterval(refreshData, 60000);
+    function flipHourglass() {
+      const hourglass = document.getElementById('hourglass');
+      hourglass.style.transform = 'rotate(180deg)';
+      setTimeout(() => {
+        hourglass.style.transform = 'rotate(0deg)';
+      }, 500); // Flip back after animation
+    }
+
+    fetchBitcoinPrice();
+
+    // Refresh every 60 seconds
+    setInterval(fetchBitcoinPrice, 60000);
   </script>
 </body>
 </html>
