--- a/index.html
+++ b/index.html
@@ -93,106 +93,50 @@
     const cellSize = mazeCanvas.width / mazeSize;
     let maze, player, end, elapsedTime, timerInterval, mazeTimer, solvedEarly;
 
-    // Sudoku data
-    const sudokuPuzzle = [
-      [5, 3, 0, 0, 7, 0, 0, 0, 0],
-      [6, 0, 0, 1, 9, 5, 0, 0, 0],
-      [0, 9, 8, 0, 0, 0, 0, 6, 0],
+    // Predefined Sudoku puzzles and solutions
+    const sudokuPuzzles = [
+      {
+        puzzle: [
+          [5, 3, 0, 0, 7, 0, 0, 0, 0],
+          [6, 0, 0, 1, 9, 5, 0, 0, 0],
+          [0, 9, 8, 0, 0, 0, 0, 6, 0],
+        ],
+        solution: [
+          [5, 3, 4, 6, 7, 8, 9, 1, 2],
+          [6, 7, 2, 1, 9, 5, 3, 4, 8],
+          [1, 9, 8, 3, 4, 2, 5, 6, 7],
+        ],
+      },
+      {
+        puzzle: [
+          [8, 0, 0, 0, 0, 0, 0, 0, 0],
+          [0, 0, 3, 6, 0, 0, 0, 0, 0],
+          [0, 7, 0, 0, 9, 0, 2, 0, 0],
+        ],
+        solution: [
+          [8, 1, 2, 7, 5, 3, 6, 4, 9],
+          [9, 4, 3, 6, 8, 2, 1, 7, 5],
+          [6, 7, 5, 4, 9, 1, 2, 8, 3],
+        ],
+      },
     ];
-    const sudokuSolution = [
-      [5, 3, 4, 6, 7, 8, 9, 1, 2],
-      [6, 7, 2, 1, 9, 5, 3, 4, 8],
-      [1, 9, 8, 3, 4, 2, 5, 6, 7],
-    ];
 
-    // Enhanced solvable maze generator
-    function generateMaze(size) {
-      const maze = Array(size).fill(null).map(() => Array(size).fill(1));
-      const stack = [];
-      let x = 0, y = 0;
-      maze[y][x] = 0;
-      stack.push([x, y]);
+    let currentSudoku;
 
-      while (stack.length > 0) {
-        const [cx, cy] = stack[stack.length - 1];
-        const directions = [];
-        if (cx > 1 && maze[cy][cx - 2] === 1) directions.push([-2, 0]);
-        if (cx < size - 2 && maze[cy][cx + 2] === 1) directions.push([2, 0]);
-        if (cy > 1 && maze[cy - 2][cx] === 1) directions.push([0, -2]);
-        if (cy < size - 2 && maze[cy + 2][cx] === 1) directions.push([0, 2]);
-
-        if (directions.length > 0) {
-          const [dx, dy] = directions[Math.floor(Math.random() * directions.length)];
-          maze[cy + dy / 2][cx + dx / 2] = 0;
-          maze[cy + dy][cx + dx] = 0;
-          stack.push([cx + dx, cy + dy]);
-        } else {
-          stack.pop();
-        }
-      }
-      return maze;
+    function pickRandomSudoku() {
+      currentSudoku = sudokuPuzzles[Math.floor(Math.random() * sudokuPuzzles.length)];
     }
 
-    // Draw the maze
-    function drawMaze() {
-      ctx.clearRect(0, 0, mazeCanvas.width, mazeCanvas.height);
-      for (let i = 0; i < mazeSize; i++) {
-        for (let j = 0; j < mazeSize; j++) {
-          if (maze[i][j] === 1) {
-            ctx.fillStyle = '#000';
-            ctx.fillRect(j * cellSize, i * cellSize, cellSize, cellSize);
-          }
-        }
-      }
-      // Draw player
-      ctx.fillStyle = '#f7931a';
-      ctx.fillRect(player.x * cellSize, player.y * cellSize, cellSize, cellSize);
-      // Draw end point
-      ctx.fillStyle = '#33cc33';
-      ctx.fillRect(end.x * cellSize, end.y * cellSize, cellSize, cellSize);
-    }
-
-    // Handle movement
-    document.addEventListener('keydown', (e) => {
-      if (solvedEarly) return;
-      const moves = {
-        ArrowUp: { x: 0, y: -1 },
-        ArrowDown: { x: 0, y: 1 },
-        ArrowLeft: { x: -1, y: 0 },
-        ArrowRight: { x: 1, y: 0 },
-      };
-      const move = moves[e.key];
-      if (move) {
-        const newX = player.x + move.x;
-        const newY = player.y + move.y;
-        if (
-          newX >= 0 &&
-          newX < mazeSize &&
-          newY >= 0 &&
-          newY < mazeSize &&
-          maze[newY][newX] === 0
-        ) {
-          player.x = newX;
-          player.y = newY;
-          drawMaze();
-          if (player.x === end.x && player.y === end.y) {
-            solvedEarly = true;
-            clearInterval(mazeTimer);
-            showSudoku();
-          }
-        }
-      }
-    });
-
-    // Show Sudoku
+    // Sudoku Generator
     function showSudoku() {
+      pickRandomSudoku();
       document.getElementById('mazeCanvas').style.display = 'none';
       document.getElementById('sudoku').style.display = 'block';
       const sudokuTable = document.getElementById('sudokuTable');
       sudokuTable.innerHTML = '';
-      sudokuPuzzle.forEach((row, rowIndex) => {
+      currentSudoku.puzzle.forEach(row => {
         const tr = document.createElement('tr');
-        row.forEach((cell, colIndex) => {
+        row.forEach(cell => {
           const td = document.createElement('td');
           td.innerText = cell === 0 ? '' : cell;
           tr.appendChild(td);
@@ -205,7 +149,7 @@
     document.getElementById('teachBtn').addEventListener('click', () => {
       const sudokuTable = document.getElementById('sudokuTable');
       sudokuTable.innerHTML = '';
-      sudokuSolution.forEach(row => {
+      currentSudoku.solution.forEach(row => {
         const tr = document.createElement('tr');
         row.forEach(cell => {
           const td = document.createElement('td');
@@ -214,6 +158,22 @@
         });
         sudokuTable.appendChild(tr);
       });
+    });
+
+    // Conversion Feature
+    let btcToUsdPrice;
+    document.getElementById('btcInput').addEventListener('input', (e) => {
+      const btcValue = parseFloat(e.target.value);
+      if (!isNaN(btcValue) && btcToUsdPrice) {
+        document.getElementById('usdInput').value = (btcValue * btcToUsdPrice).toFixed(2);
+      }
+    });
+
+    document.getElementById('usdInput').addEventListener('input', (e) => {
+      const usdValue = parseFloat(e.target.value);
+      if (!isNaN(usdValue) && btcToUsdPrice) {
+        document.getElementById('btcInput').value = (usdValue / btcToUsdPrice).toFixed(8);
+      }
     });
 
     // Timer
@@ -247,7 +207,6 @@
     }
 
     // Fetch Bitcoin price
-    let btcToUsdPrice;
     async function fetchBitcoinPrice() {
       try {
         const response = await fetch('https://api.coingecko.com/api/v3/simple/price?ids=bitcoin&vs_currencies=usd');
