--- a/index.html
+++ b/index.html
@@ -208,22 +208,23 @@
 
     // Fetch Bitcoin price
     async function fetchBitcoinPrice() {
-      try {
-        const response = await fetch('https://api.coingecko.com/api/v3/simple/price?ids=bitcoin&vs_currencies=usd');
-        const data = await response.json();
-        btcToUsdPrice = data.bitcoin.usd;
-        const btcToUsd = btcToUsdPrice;
-        const usdToBtc = 1 / btcToUsd;
+  try {
+    const response = await fetch('https://api.coingecko.com/api/v3/simple/price?ids=bitcoin&vs_currencies=usd');
+    if (!response.ok) throw new Error('Network response was not ok');
+    const data = await response.json();
+    btcToUsdPrice = data.bitcoin.usd;
+    const btcToUsd = btcToUsdPrice;
+    const usdToBtc = 1 / btcToUsd;
 
-        document.getElementById('btcToUsd').innerText = `1 Bitcoin = $${btcToUsd.toLocaleString()} USD`;
-        document.getElementById('usdToBtc').innerText = `1 USD = ${usdToBtc.toFixed(8)} BTC`;
+    document.getElementById('btcToUsd').innerText = `1 Bitcoin = $${btcToUsd.toLocaleString()} USD`;
+    document.getElementById('usdToBtc').innerText = `1 USD = ${usdToBtc.toFixed(8)} BTC`;
+  } catch (error) {
+    document.getElementById('btcToUsd').innerText = 'Error fetching BTC to USD price.';
+    document.getElementById('usdToBtc').innerText = 'Error fetching USD to BTC price.';
+    console.error('Error fetching Bitcoin price:', error);
+  }
+}
 
-        initializeMaze();
-      } catch (error) {
-        document.getElementById('btcToUsd').innerText = 'Error fetching BTC to USD price.';
-        document.getElementById('usdToBtc').innerText = 'Error fetching USD to BTC price.';
-      }
-    }
 
     fetchBitcoinPrice();
     setInterval(fetchBitcoinPrice, 60000);
