--- a/index.html
+++ b/index.html
@@ -92,106 +92,39 @@
     const mazeSize = 15;
     const cellSize = mazeCanvas.width / mazeSize;
     let maze, player, end, elapsedTime, timerInterval, mazeTimer, solvedEarly;
-
-    // Predefined Sudoku puzzles and solutions
-    const sudokuPuzzles = [
-      {
-        puzzle: [
-          [5, 3, 0, 0, 7, 0, 0, 0, 0],
-          [6, 0, 0, 1, 9, 5, 0, 0, 0],
-          [0, 9, 8, 0, 0, 0, 0, 6, 0],
-        ],
-        solution: [
-          [5, 3, 4, 6, 7, 8, 9, 1, 2],
-          [6, 7, 2, 1, 9, 5, 3, 4, 8],
-          [1, 9, 8, 3, 4, 2, 5, 6, 7],
-        ],
-      },
-      {
-        puzzle: [
-          [8, 0, 0, 0, 0, 0, 0, 0, 0],
-          [0, 0, 3, 6, 0, 0, 0, 0, 0],
-          [0, 7, 0, 0, 9, 0, 2, 0, 0],
-        ],
-        solution: [
-          [8, 1, 2, 7, 5, 3, 6, 4, 9],
-          [9, 4, 3, 6, 8, 2, 1, 7, 5],
-          [6, 7, 5, 4, 9, 1, 2, 8, 3],
-        ],
-      },
-    ];
-
-    let currentSudoku;
-
-    function pickRandomSudoku() {
-      currentSudoku = sudokuPuzzles[Math.floor(Math.random() * sudokuPuzzles.length)];
-    }
-
-    // Sudoku Generator
-    function showSudoku() {
-      pickRandomSudoku();
-      document.getElementById('mazeCanvas').style.display = 'none';
-      document.getElementById('sudoku').style.display = 'block';
-      const sudokuTable = document.getElementById('sudokuTable');
-      sudokuTable.innerHTML = '';
-      currentSudoku.puzzle.forEach(row => {
-        const tr = document.createElement('tr');
-        row.forEach(cell => {
-          const td = document.createElement('td');
-          td.innerText = cell === 0 ? '' : cell;
-          tr.appendChild(td);
-        });
-        sudokuTable.appendChild(tr);
-      });
-    }
-
-    // Teach Button
-    document.getElementById('teachBtn').addEventListener('click', () => {
-      const sudokuTable = document.getElementById('sudokuTable');
-      sudokuTable.innerHTML = '';
-      currentSudoku.solution.forEach(row => {
-        const tr = document.createElement('tr');
-        row.forEach(cell => {
-          const td = document.createElement('td');
-          td.innerText = cell;
-          tr.appendChild(td);
-        });
-        sudokuTable.appendChild(tr);
-      });
-    });
+    let btcToUsdPrice = null; // Initialize price variable
 
     // Conversion Feature
-    let btcToUsdPrice;
     document.getElementById('btcInput').addEventListener('input', (e) => {
       const btcValue = parseFloat(e.target.value);
-      if (!isNaN(btcValue) && btcToUsdPrice) {
+      if (!isNaN(btcValue) && btcToUsdPrice !== null) {
         document.getElementById('usdInput').value = (btcValue * btcToUsdPrice).toFixed(2);
       }
     });
 
     document.getElementById('usdInput').addEventListener('input', (e) => {
       const usdValue = parseFloat(e.target.value);
-      if (!isNaN(usdValue) && btcToUsdPrice) {
+      if (!isNaN(usdValue) && btcToUsdPrice !== null) {
         document.getElementById('btcInput').value = (usdValue / btcToUsdPrice).toFixed(8);
       }
     });
 
-    // Timer
-    function startTimer() {
-      elapsedTime = 0;
-      solvedEarly = false;
-      const timerElement = document.getElementById('timer');
-      clearInterval(timerInterval);
-      timerInterval = setInterval(() => {
-        elapsedTime++;
-        timerElement.innerText = `Elapsed Time: ${elapsedTime} seconds`;
-        if (elapsedTime === 59) {
-          clearInterval(timerInterval);
-          document.getElementById('sudoku').style.display = 'none';
-          document.getElementById('mazeCanvas').style.display = 'block';
-          initializeMaze();
-        }
-      }, 1000);
+    // Fetch Bitcoin price
+    async function fetchBitcoinPrice() {
+      try {
+        const response = await fetch('https://api.coingecko.com/api/v3/simple/price?ids=bitcoin&vs_currencies=usd');
+        if (!response.ok) throw new Error(`API Error: ${response.status}`);
+        const data = await response.json();
+        btcToUsdPrice = data.bitcoin.usd;
+
+        document.getElementById('btcToUsd').innerText = `1 Bitcoin = $${btcToUsdPrice.toLocaleString()} USD`;
+        document.getElementById('usdToBtc').innerText = `1 USD = ${(1 / btcToUsdPrice).toFixed(8)} BTC`;
+      } catch (error) {
+        console.error(error);
+        btcToUsdPrice = null; // Reset price if API fails
+        document.getElementById('btcToUsd').innerText = 'Error fetching BTC to USD price.';
+        document.getElementById('usdToBtc').innerText = 'Error fetching USD to BTC price.';
+      }
     }
 
     // Initialize maze
@@ -206,28 +139,57 @@
       }, 58000);
     }
 
-    // Fetch Bitcoin price
-    async function fetchBitcoinPrice() {
-  try {
-    const response = await fetch('https://api.coingecko.com/api/v3/simple/price?ids=bitcoin&vs_currencies=usd');
-    if (!response.ok) throw new Error('Network response was not ok');
-    const data = await response.json();
-    btcToUsdPrice = data.bitcoin.usd;
-    const btcToUsd = btcToUsdPrice;
-    const usdToBtc = 1 / btcToUsd;
+    // Generate maze (solvable)
+    function generateMaze(size) {
+      const maze = Array(size).fill(null).map(() => Array(size).fill(1));
+      const stack = [];
+      let x = 0, y = 0;
+      maze[y][x] = 0;
+      stack.push([x, y]);
 
-    document.getElementById('btcToUsd').innerText = `1 Bitcoin = $${btcToUsd.toLocaleString()} USD`;
-    document.getElementById('usdToBtc').innerText = `1 USD = ${usdToBtc.toFixed(8)} BTC`;
-    initializeMaze();
-  } catch (error) {
-    document.getElementById('btcToUsd').innerText = 'Error fetching BTC to USD price.';
-    document.getElementById('usdToBtc').innerText = 'Error fetching USD to BTC price.';
-    console.error('Error fetching Bitcoin price:', error);
-  }
-}
+      while (stack.length > 0) {
+        const [cx, cy] = stack[stack.length - 1];
+        const directions = [];
+        if (cx > 1 && maze[cy][cx - 2] === 1) directions.push([-2, 0]);
+        if (cx < size - 2 && maze[cy][cx + 2] === 1) directions.push([2, 0]);
+        if (cy > 1 && maze[cy - 2][cx] === 1) directions.push([0, -2]);
+        if (cy < size - 2 && maze[cy + 2][cx] === 1) directions.push([0, 2]);
 
+        if (directions.length > 0) {
+          const [dx, dy] = directions[Math.floor(Math.random() * directions.length)];
+          maze[cy + dy / 2][cx + dx / 2] = 0;
+          maze[cy + dy][cx + dx] = 0;
+          stack.push([cx + dx, cy + dy]);
+        } else {
+          stack.pop();
+        }
+      }
+      return maze;
+    }
 
-    fetchBitcoinPrice();
+    // Draw maze
+    function drawMaze() {
+      ctx.clearRect(0, 0, mazeCanvas.width, mazeCanvas.height);
+      for (let i = 0; i < mazeSize; i++) {
+        for (let j = 0; j < mazeSize; j++) {
+          if (maze[i][j] === 1) {
+            ctx.fillStyle = '#000';
+            ctx.fillRect(j * cellSize, i * cellSize, cellSize, cellSize);
+          }
+        }
+      }
+      // Draw player
+      ctx.fillStyle = '#f7931a';
+      ctx.fillRect(player.x * cellSize, player.y * cellSize, cellSize, cellSize);
+      // Draw end point
+      ctx.fillStyle = '#33cc33';
+      ctx.fillRect(end.x * cellSize, end.y * cellSize, cellSize, cellSize);
+    }
+
+    // Run application
+    fetchBitcoinPrice().finally(() => {
+      initializeMaze(); // Ensure maze initializes even if API fails
+    });
     setInterval(fetchBitcoinPrice, 60000);
   </script>
 </body>
