--- a/index.html
+++ b/index.html
@@ -92,104 +92,101 @@
     const mazeSize = 15;
     const cellSize = mazeCanvas.width / mazeSize;
     let maze, player, end, elapsedTime, timerInterval, mazeTimer, solvedEarly;
-    let btcToUsdPrice = null; // Initialize price variable
+    let btcToUsdPrice = null;
 
-    // Conversion Feature
+    const sudokuPool = [
+      {
+        puzzle: [
+          [5, 3, 0, 0, 7, 0, 0, 0, 0],
+          [6, 0, 0, 1, 9, 5, 0, 0, 0],
+          [0, 9, 8, 0, 0, 0, 0, 6, 0],
+        ],
+        solution: [
+          [5, 3, 4, 6, 7, 8, 9, 1, 2],
+          [6, 7, 2, 1, 9, 5, 3, 4, 8],
+          [1, 9, 8, 3, 4, 2, 5, 6, 7],
+        ],
+      },
+      {
+        puzzle: [
+          [8, 0, 0, 0, 6, 0, 0, 0, 3],
+          [4, 0, 0, 8, 0, 3, 0, 0, 1],
+          [7, 0, 0, 0, 2, 0, 0, 0, 6],
+        ],
+        solution: [
+          [8, 1, 2, 7, 6, 5, 4, 9, 3],
+          [4, 9, 6, 8, 5, 3, 7, 2, 1],
+          [7, 5, 3, 4, 2, 9, 8, 1, 6],
+        ],
+      },
+    ];
+
+    let currentSudoku = null;
+
+    function loadRandomSudoku() {
+      currentSudoku = sudokuPool[Math.floor(Math.random() * sudokuPool.length)];
+      const sudokuTable = document.getElementById('sudokuTable');
+      sudokuTable.innerHTML = '';
+      currentSudoku.puzzle.forEach(row => {
+        const tr = document.createElement('tr');
+        row.forEach(cell => {
+          const td = document.createElement('td');
+          td.innerText = cell === 0 ? '' : cell;
+          tr.appendChild(td);
+        });
+        sudokuTable.appendChild(tr);
+      });
+    }
+
+    document.getElementById('teachBtn').addEventListener('click', () => {
+      const sudokuTable = document.getElementById('sudokuTable');
+      sudokuTable.innerHTML = '';
+      currentSudoku.solution.forEach(row => {
+        const tr = document.createElement('tr');
+        row.forEach(cell => {
+          const td = document.createElement('td');
+          td.innerText = cell;
+          tr.appendChild(td);
+        });
+        sudokuTable.appendChild(tr);
+      });
+    });
+
     document.getElementById('btcInput').addEventListener('input', (e) => {
       const btcValue = parseFloat(e.target.value);
-      if (!isNaN(btcValue) && btcToUsdPrice !== null) {
+      if (!isNaN(btcValue) && btcToUsdPrice) {
         document.getElementById('usdInput').value = (btcValue * btcToUsdPrice).toFixed(2);
       }
     });
 
     document.getElementById('usdInput').addEventListener('input', (e) => {
       const usdValue = parseFloat(e.target.value);
-      if (!isNaN(usdValue) && btcToUsdPrice !== null) {
+      if (!isNaN(usdValue) && btcToUsdPrice) {
         document.getElementById('btcInput').value = (usdValue / btcToUsdPrice).toFixed(8);
       }
     });
 
-    // Fetch Bitcoin price
-    async function fetchBitcoinPrice() {
+    async function fetchBitcoinPrice(retryCount = 3) {
       try {
         const response = await fetch('https://api.coingecko.com/api/v3/simple/price?ids=bitcoin&vs_currencies=usd');
-        if (!response.ok) throw new Error(`API Error: ${response.status}`);
+        if (!response.ok) throw new Error('API request failed');
         const data = await response.json();
         btcToUsdPrice = data.bitcoin.usd;
-
         document.getElementById('btcToUsd').innerText = `1 Bitcoin = $${btcToUsdPrice.toLocaleString()} USD`;
         document.getElementById('usdToBtc').innerText = `1 USD = ${(1 / btcToUsdPrice).toFixed(8)} BTC`;
+        initializeMaze();
       } catch (error) {
-        console.error(error);
-        btcToUsdPrice = null; // Reset price if API fails
-        document.getElementById('btcToUsd').innerText = 'Error fetching BTC to USD price.';
-        document.getElementById('usdToBtc').innerText = 'Error fetching USD to BTC price.';
-      }
-    }
-
-    // Initialize maze
-    function initializeMaze() {
-      maze = generateMaze(mazeSize);
-      player = { x: 0, y: 0 };
-      end = { x: mazeSize - 1, y: mazeSize - 1 };
-      drawMaze();
-      startTimer();
-      mazeTimer = setTimeout(() => {
-        if (!solvedEarly) solveMaze();
-      }, 58000);
-    }
-
-    // Generate maze (solvable)
-    function generateMaze(size) {
-      const maze = Array(size).fill(null).map(() => Array(size).fill(1));
-      const stack = [];
-      let x = 0, y = 0;
-      maze[y][x] = 0;
-      stack.push([x, y]);
-
-      while (stack.length > 0) {
-        const [cx, cy] = stack[stack.length - 1];
-        const directions = [];
-        if (cx > 1 && maze[cy][cx - 2] === 1) directions.push([-2, 0]);
-        if (cx < size - 2 && maze[cy][cx + 2] === 1) directions.push([2, 0]);
-        if (cy > 1 && maze[cy - 2][cx] === 1) directions.push([0, -2]);
-        if (cy < size - 2 && maze[cy + 2][cx] === 1) directions.push([0, 2]);
-
-        if (directions.length > 0) {
-          const [dx, dy] = directions[Math.floor(Math.random() * directions.length)];
-          maze[cy + dy / 2][cx + dx / 2] = 0;
-          maze[cy + dy][cx + dx] = 0;
-          stack.push([cx + dx, cy + dy]);
+        if (retryCount > 0) {
+          setTimeout(() => fetchBitcoinPrice(retryCount - 1), 2000);
         } else {
-          stack.pop();
+          document.getElementById('btcToUsd').innerText = 'Failed to fetch Bitcoin price. Retrying...';
+          document.getElementById('usdToBtc').innerText = 'Please try again later.';
+          initializeMaze(); // Load maze regardless of API failure
         }
       }
-      return maze;
     }
 
-    // Draw maze
-    function drawMaze() {
-      ctx.clearRect(0, 0, mazeCanvas.width, mazeCanvas.height);
-      for (let i = 0; i < mazeSize; i++) {
-        for (let j = 0; j < mazeSize; j++) {
-          if (maze[i][j] === 1) {
-            ctx.fillStyle = '#000';
-            ctx.fillRect(j * cellSize, i * cellSize, cellSize, cellSize);
-          }
-        }
-      }
-      // Draw player
-      ctx.fillStyle = '#f7931a';
-      ctx.fillRect(player.x * cellSize, player.y * cellSize, cellSize, cellSize);
-      // Draw end point
-      ctx.fillStyle = '#33cc33';
-      ctx.fillRect(end.x * cellSize, end.y * cellSize, cellSize, cellSize);
-    }
-
-    // Run application
-    fetchBitcoinPrice().finally(() => {
-      initializeMaze(); // Ensure maze initializes even if API fails
-    });
+    fetchBitcoinPrice();
     setInterval(fetchBitcoinPrice, 60000);
   </script>
 </body>
