--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Bitcoin Converter and Maze-Sudoku Game</title>
+  <title>Bitcoin Converter and Maze Game</title>
   <style>
     body {
       font-family: Arial, sans-serif;
       text-align: center;
       margin: 20px;
-      background-color: #ffffff;
+      background-color: #ffffff; /* Pure white background */
     }
     h1 {
       color: #f7931a;
@@ -45,15 +45,14 @@
     }
     .sudoku-container table {
       margin: 0 auto;
-      border-collapse: collapse;
-      table-layout: fixed;
+      border-spacing: 0;
     }
     .sudoku-container td {
+      text-align: center;
+      font-size: 1.2rem;
+      border: 1px solid #333;
       width: 33px;
       height: 33px;
-      text-align: center;
-      font-size: 1.5rem;
-      border: 1px solid #333;
     }
     .sudoku-container button {
       margin-top: 10px;
@@ -61,14 +60,14 @@
       padding: 8px 15px;
     }
     #timer {
-      font-size: 2rem;
+      font-size: 1.5rem;
       margin-top: 10px;
       color: #333;
     }
   </style>
 </head>
 <body>
-  <!-- Part 1: Bitcoin and USD Converter -->
+  <!-- Part 1: Bitcoin and USD Conversion -->
   <div>
     <h1>Bitcoin and USD Converter</h1>
     <div id="btcToUsd" class="price">Loading 1 BTC to USD...</div>
@@ -101,13 +100,13 @@
     <!-- Sudoku Container -->
     <div id="sudokuContainer" class="sudoku-container">
       <h2>Solve This Sudoku!</h2>
-      <table id="sudokuTable" style="width: 300px; height: 300px;"></table>
+      <table id="sudokuTable"></table>
       <button id="solveSudokuBtn">Solve</button>
     </div>
   </div>
 
   <script>
-    // Part 1: Bitcoin and USD Converter
+    // Part 1: Bitcoin and USD Conversion
     let btcToUsdPrice = null;
 
     async function fetchBitcoinPrice() {
@@ -213,7 +212,7 @@
       clearInterval(timerInterval);
       timerInterval = setInterval(() => {
         elapsedTime++;
-        document.getElementById('timer').innerText = `Price updates every 1 minute`;
+        document.getElementById('timer').innerText = `Price updates every 1 minute: ${elapsedTime} seconds`;
 
         if (elapsedTime >= 60) {
           resetGame();
@@ -223,7 +222,7 @@
 
     function resetGame() {
       clearInterval(timerInterval);
-      sudokuContainer.style.display = 'none';
+      document.getElementById('sudokuContainer').style.display = 'none';
       mazeCanvas.style.display = 'block';
       initializeMaze();
     }
@@ -267,52 +266,15 @@
     function showSudoku() {
       mazeCanvas.style.display = 'none';
       sudokuContainer.style.display = 'block';
-      generateSudoku();
+      generateRandomSudoku();
     }
 
-    function generateSudoku() {
-      sudokuPuzzle = Array(9)
-        .fill(null)
-        .map(() => Array(9).fill(0));
-
-      sudokuSolution = JSON.parse(JSON.stringify(sudokuPuzzle));
-
-      for (let i = 0; i < 9; i++) {
-        for (let j = 0; j < 9; j++) {
-          let num = Math.floor(Math.random() * 9) + 1;
-          let attempts = 0;
-          while (!isValid(num, i, j) && attempts < 10) {
-            num = Math.floor(Math.random() * 9) + 1;
-            attempts++;
-          }
-          if (isValid(num, i, j)) {
-            sudokuPuzzle[i][j] = Math.random() > 0.5 ? num : 0;
-            sudokuSolution[i][j] = num;
-          }
-        }
-      }
-
+    function generateRandomSudoku() {
+      sudokuPuzzle = Array.from({ length: 9 }, () =>
+        Array.from({ length: 9 }, () => (Math.random() > 0.5 ? Math.floor(Math.random() * 9) + 1 : 0))
+      );
+      sudokuSolution = sudokuPuzzle.map((row) => row.map((cell) => (cell === 0 ? Math.floor(Math.random() * 9) + 1 : cell)));
       renderSudoku();
-    }
-
-    function isValid(num, row, col) {
-      for (let k = 0; k < 9; k++) {
-        if (sudokuSolution[row][k] === num || sudokuSolution[k][col] === num) {
-          return false;
-        }
-      }
-
-      const startRow = Math.floor(row / 3) * 3;
-      const startCol = Math.floor(col / 3) * 3;
-      for (let r = startRow; r < startRow + 3; r++) {
-        for (let c = startCol; c < startCol + 3; c++) {
-          if (sudokuSolution[r][c] === num) {
-            return false;
-          }
-        }
-      }
-
-      return true;
     }
 
     function renderSudoku() {
